# Groebner-Basis

./: CMakeLists.txt  algorithms.h  concepts.h  cyclic.h  main.cpp  modular.h  monomial.h  order.h  overflow_detector.h  polynomial.h  rational.h  test.cpp  test.h
